--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,27 +2,14 @@ spring:
   application:
     name: cherry-server
 
-  # Database Configuration
-  datasource:
-    url: jdbc:mysql://cherry.cdy8yc6s0cba.ap-northeast-2.rds.amazonaws.com:3306/cherry?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: cherry_app
-    password: ${DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:local}
 
   jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-
-  # Redis Configuration (Local)
-  data:
-    redis:
-      host: localhost
-      port: 6379
 
 server:
   port: 8080
