feat: 로그인, 회원가입, 인증 API 추가 및 cors 설정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -19,3 +19,7 @@ spring:
     redis:
       host: ${SPRING_DATA_REDIS_HOST:redis}
       port: ${SPRING_DATA_REDIS_PORT:6379}
+
+# CORS Configuration (for production deployment)
+cors:
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:https://cherriy.com,https://www.cherriy.com}
