--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,16 +42,40 @@ jobs:
       - name: Deploy on EC2 (pull & up)
         uses: appleboy/ssh-action@v1.0.3
         env:
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          envs: DB_PASSWORD
+          envs: DB_HOST,DB_NAME,DB_USERNAME,DB_PASSWORD
           script: |
             set -e
             cd /home/ec2-user/cherry
-            echo "DB_PASSWORD=$DB_PASSWORD" > .env
+            
+            # Create .env file with all DB configuration
+            # Note: DB_PASSWORD is masked in logs by GitHub Actions
+            cat > .env << EOF
+            DB_HOST=${DB_HOST}
+            DB_NAME=${DB_NAME}
+            DB_USERNAME=${DB_USERNAME}
+            DB_PASSWORD=${DB_PASSWORD}
+            SPRING_DATASOURCE_URL=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+            SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
+            SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
+            EOF
+            
+            # Secure .env file permissions
+            chmod 600 .env
+            
+            # Pull latest images and restart containers
             docker compose pull || docker-compose pull
-            docker compose up -d || docker-compose up -d
+            docker compose --env-file .env up -d || docker-compose --env-file .env up -d
+            
+            # Cleanup old images
             docker image prune -f
+            
+            echo "Deployment completed. Verifying container status..."
+            docker compose ps || docker-compose ps
