--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,12 +1,8 @@
 spring:
   datasource:
-    url: >-
-      jdbc:mysql://cherry.cdy8yc6s0cba.ap-northeast-2.rds.amazonaws.com:3306/cherry
-      ?useSSL=false
-      &serverTimezone=Asia/Seoul
-      &characterEncoding=UTF-8
-    username: cherry_app
-    password: ${DB_PASSWORD}
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://cherry.cdy8yc6s0cba.ap-northeast-2.rds.amazonaws.com:3306/cherry?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8}
+    username: ${SPRING_DATASOURCE_USERNAME:cherry_app}
+    password: ${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD}}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
