--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,7 +8,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
 
   # Redis Configuration
   data:
@@ -19,3 +19,6 @@ spring:
 # CORS Configuration (for production deployment)
 cors:
   allowed-origins: ${CORS_ALLOWED_ORIGINS:https://cherriy.com,https://www.cherriy.com}
+
+jwt:
+  secret: ${JWT_SECRET}
