--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,6 +4,11 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+    hikari:
+      maximum-pool-size: 5
+      minimum-idle: 2
+      connection-timeout: 3000
+      max-lifetime: 1800000
 
   jpa:
     hibernate:
@@ -19,4 +24,3 @@ spring:
 
 jwt:
   secret: cherry-test-secret-please-change-32bytes
-
