--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -23,7 +23,7 @@ spring:
 
 # CORS Configuration (for production deployment)
 cors:
-  allowed-origins: ${CORS_ALLOWED_ORIGINS:https://cherriy.com,https://www.cherriy.com}
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:https://cheryi.com,https://www.cheryi.com}
 
 jwt:
   secret: ${JWT_SECRET}
